change: config moved
- config file moved to config folder
- Updated database class for accessing config

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 env/
-__pycache__/
-model/__pycache__
-database/db.py
-config.json
 test.py
+database/db.py
+config/config.json
+__pycache__/
+model/__pycache__/
+config/__pycache__/
