--- a/config/example.config.json
+++ b/config/example.config.json
@@ -1,4 +1,8 @@
 {
+    "app": {
+        "name": "",
+        "version": "v1.1"
+    },
     "database": {
         "username": "",
         "password": "",
